--- a/Checklist/Views/Checklist/Index.cshtml
+++ b/Checklist/Views/Checklist/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@model IEnumerable<CheckListDataModel.CheckList>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "CheckLists";
 }
 
 <div data-role="header" id="hdrCategories" data-nobackbtn="true">
-<h1>Lists</h1>
-<a id="buttonNewCategory" data-icon="plus" class="ui-btn-right" href="" data-role="button" data-inline="true">Checklist</a>
+<h1>@ViewBag.Title</h1>
+<a id="buttonNewCategory" data-icon="plus" class="ui-btn-right" href="/Checklist/Create" data-role="button" data-inline="true">Checklist</a>
 </div>
 <div data-role="content" id="indexContent">
-<ul data-role="listview" data-inset="true" data-theme="d" >
+<ul data-role="listview" data-inset="true" >
     <li data-role="list-divider">Index</li>
     @foreach (var item in Model) {
     <li>@Html.ActionLink(@item.Name, "Select", new { name = item.Name })</li>  
