--- a/Checklist/Views/Shared/_Layout.cshtml
+++ b/Checklist/Views/Shared/_Layout.cshtml
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
-   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.css" />
+    <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js"></script>
 </head>
 
 <body>
  <div data-role="page" data-theme="b" id="containerPage">
-     @RenderBody()
+	 @RenderBody()
  </div>
 </body>
 </html>
