--- a/Checklist/Views/Shared/_Layout.cshtml
+++ b/Checklist/Views/Shared/_Layout.cshtml
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.css" />
-    <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js"></script>
+    <link href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" rel="stylesheet" type="text/css" />
+    <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+    <script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
+    <script type="text/javascript" src="../../Scripts/speak.full.js"></script>
+
 </head>
 
 <body>
