--- a/CheckList/Views/Checklist/Item.cshtml
+++ b/CheckList/Views/Checklist/Item.cshtml
@@ -4,11 +4,11 @@
 	ViewBag.Title = @Model.Name;
 }
 
-<div data-role="header" id="hdrCategories">
+<div data-role="header">
 	<h1>@Model.Name</h1>
 </div>
 
-<div data-role="content" id="contentDetails" name="contentDetails">
+<div data-role="content">
 <fieldset>
 
     <div class="display-label">Name</div>
