--- a/Checklist/Views/Checklist/Details.cshtml
+++ b/Checklist/Views/Checklist/Details.cshtml
@@ -4,10 +4,10 @@
 	ViewBag.Title = @Model.Parent;
 }
 
-<div data-role="header" id="hdrCategories">
+<div data-role="header">
 	<h1>@Model.Name</h1>
 </div>
-<div data-role="content" id="contentDetails" name="contentDetails">
+<div data-role="content">
     <div id="namePanel" data-role="fieldcontain" >
 	    <div class="display-label">Name</div>
         <div class="ui-field-contain ui-body ui-br">
