--- a/Checklist/Views/Shared/_Layout.cshtml
+++ b/Checklist/Views/Shared/_Layout.cshtml
@@ -1,17 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device=width, initial-scale=1" />
     <title>@ViewBag.Title</title>
     <link href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" rel="stylesheet" type="text/css" />
-    <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+    <script type="text/javascript" src="../../Scripts/jquery-1.7.2.js"></script>
     <script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
-    <script type="text/javascript" src="../../Scripts/speak.full.js"></script>
-
 </head>
 
 <body>
- <div data-role="page" data-theme="b" id="containerPage">
-	 @RenderBody()
- </div>
+    <div data-role="page" data-theme="a">
+        @RenderBody()
+    </div>
 </body>
 </html>
