Added back button functionality.

--- a/Checklist/Views/Shared/_Layout.cshtml
+++ b/Checklist/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div data-role="page" data-theme="a">
+    <div data-role="page" data-theme="a" data-add-back-btn="true">
         @RenderBody()
     </div>
 </body>
